[package]
name = "commonlibsse_ng"
description = "CommonLibSSE-NG Rust bindings"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.41", optional = true }
snafu = { version = "0.8.5" }                     # To define error types.

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
  "Win32",
  "Win32_Security",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_System",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Environment",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
], optional = true }

[build-dependencies]
bindgen = { version = "0.69.5", optional = true }
reqwest = { version = "0.12.12", features = ["blocking"], optional = true }
zip-extract = { version = "0.2.1", optional = true }

[features]
# Default features for the project
default = ["prebuilt"]

# Get the pre-built header files and libs from the URL. (zip: 160MB, Extracted: 600MB, Timeout: 30mins)
prebuilt = ["dep:reqwest", "dep:zip-extract"]
# Use vcpkg to build C++ and get headers and libs
vcpkg = []

# Generate binding(For crate maintainer)
generate = ["dep:bindgen"]

# Enable functions that use the Windows API.
# For example, functions to get file version information.
win_api = ["dep:windows"]

# Enable tracing log support
tracing = ["dep:tracing"]


# For test and debugging.
debug = ["win_api", "tracing", "no_sys"]

# Non use C++ binding(For debugging)
no_sys = []

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# allow list
negative_feature_names = "allow" # Because it is hard to debug without the no_sys feature.
cargo_common_metadata = "allow"
derive_partial_eq_without_eq = "allow"
future_not_send = "allow"
multiple_crate_versions = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"

# custom deny list
# allow_attributes_without_reason = "deny"
char_lit_as_u8 = "deny"
checked_conversions = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
debug_assert_with_mut_call = "deny"
disallowed_script_idents = "deny"
doc_link_with_quotes = "deny"
empty_enum = "deny"
empty_line_after_outer_attr = "deny"
empty_structs_with_brackets = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
fallible_impl_from = "deny"
filetype_is_file = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast_any = "deny"
from_iter_instead_of_collect = "deny"
if_let_mutex = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
items_after_test_module = "deny"
large_digit_groups = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
let_unit_value = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
manual_ok_or = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_on_vec_items = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
mem_forget = "deny"
missing_const_for_fn = "deny"
missing_enforced_import_renames = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
mut_mut = "deny"
mutex_integer = "deny"
needless_borrow = "deny"
needless_continue = "deny"
needless_for_each = "deny"
option_if_let_else = "deny"
option_option = "deny"
path_buf_push_overwrite = "deny"
ptr_as_ptr = "deny"
rc_mutex = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "deny"
string_to_string = "deny"
suspicious_operation_groupings = "deny"
trait_duplication_in_bounds = "deny"
unnested_or_patterns = "deny"
unseparated_literal_suffix = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
useless_let_if_seq = "deny"
useless_transmute = "deny"
verbose_file_reads = "deny"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
